# method-crm-mcp

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  PUBLISHING.md  QUICKSTART.md  README.md  pyproject.toml
evaluations/: method_crm_eval.xml
src/method_mcp/: __init__.py  __main__.py  auth.py  client.py  errors.py  models.py  server.py  utils.py
src/method_mcp/tools/: __init__.py  apikeys.py  events.py  files.py  tables.py  user.py
tests/: __init__.py
