[project]
name = "method-crm-mcp"
version = "1.0.0"
description = "Production-ready Model Context Protocol (MCP) server for Method CRM API integration"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Avinash Sangle", email = "aavi.sangle@gmail.com"}
]
maintainers = [
    {name = "Avinash Sangle", email = "aavi.sangle@gmail.com"}
]
keywords = [
    "mcp",
    "method-crm",
    "model-context-protocol",
    "fastmcp",
    "api-integration",
    "crm",
    "method",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Office/Business",
]
dependencies = [
    "fastmcp>=0.2.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/avisangle/method-crm-mcp"
Documentation = "https://github.com/avisangle/method-crm-mcp#readme"
Repository = "https://github.com/avisangle/method-crm-mcp"
Issues = "https://github.com/avisangle/method-crm-mcp/issues"
Changelog = "https://github.com/avisangle/method-crm-mcp/releases"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
